Purge Cloudflare cache after deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,13 @@ install:
 script:
 - make html SPHINXOPTS=-Ea
 
+after_deploy:
+  - |
+    curl -X DELETE "https://api.cloudflare.com/client/v4/zones/${CF_ZONE_ID}/purge_cache" \
+     -H "X-Auth-Email: ${CF_EMAIL}" \
+     -H "X-Auth-Key: ${CF_API_KEY}" \
+     -H "Content-Type: application/json" \
+     --data '{"purge_everything":true}'
+
 notifications:
     email: false
