--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 script:
 - make html SPHINXOPTS=-Ea
 
-after_deploy:
+after_script:
   - |
     curl -X DELETE "https://api.cloudflare.com/client/v4/zones/${CF_ZONE_ID}/purge_cache" \
      -H "X-Auth-Email: ${CF_EMAIL}" \
