--- a/source/themes/sphinx_rtd_theme/theme.conf
+++ b/source/themes/sphinx_rtd_theme/theme.conf
@@ -9,3 +9,4 @@ sticky_navigation = False
 logo_only =
 collapse_navigation = False
 display_version = True
+canonical_url = https://www.linuxguideandhints.com/
