Now put the file in the right folder

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ install:
 - pip install sphinx
 
 script:
-- touch .nojekyll
 - make html SPHINXOPTS=-Ea
+- touch build/html/.nojekyll
 
 deploy:
     provider: pages
