Mark rst as linguist-detectable
Will work when github/linguist#3807 is merged

Additionally marked more stuff as vendored

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@ source/themes/sphinx_rtd_theme/* linguist-vendored
 source/_static/css/prism.css linguist-vendored
 source/_static/js/prism.js linguist-vendored
 source/exts/sphinx_sitemap/* linguist-vendored
+Makefile linguist-vendored
+source/conf.py linguist-vendored
+*.rst linguist-detectable
