--- a/source/themes/sphinx_rtd_theme/theme.conf
+++ b/source/themes/sphinx_rtd_theme/theme.conf
@@ -1,12 +1,17 @@
 [theme]
 inherit = basic
 stylesheet = css/theme.css
+pygments_style = default
 
 [options]
-typekit_id = hiw1hhg
-analytics_id = 
-sticky_navigation = False
+analytics_id =
+sticky_navigation = True
+collapse_navigation = True
+navigation_depth = 4
+includehidden = True
+titles_only = 
 logo_only =
-collapse_navigation = False
 display_version = True
 canonical_url = https://www.linuxguideandhints.com/
+prev_next_buttons_location = bottom
+style_external_links = False
