Disable sticky_navigation and collapse_navigation

--- a/source/themes/sphinx_rtd_theme/theme.conf
+++ b/source/themes/sphinx_rtd_theme/theme.conf
@@ -5,8 +5,8 @@ pygments_style = default
 
 [options]
 analytics_id =
-sticky_navigation = True
-collapse_navigation = True
+sticky_navigation = False
+collapse_navigation = False
 navigation_depth = 4
 includehidden = True
 titles_only = 
