--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ deploy:
     provider: pages
     skip_cleanup: true
     github_token: ${GITHUB_TOKEN}
-    fqdn: www.linuxguideandhints.com
+    fqdn: linuxguideandhints.com
     local_dir: build/html
     on:
         branch: master
