Revert "remove www from fqdn"
This reverts commit 4b206a0b8e50c6bbaef653dae2dee93437f793ca.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ deploy:
     provider: pages
     skip_cleanup: true
     github_token: ${GITHUB_TOKEN}
-    fqdn: linuxguideandhints.com
+    fqdn: www.linuxguideandhints.com
     local_dir: build/html
     on:
         branch: master
