--- a/source/themes/sphinx_rtd_theme/theme.conf
+++ b/source/themes/sphinx_rtd_theme/theme.conf
@@ -11,6 +11,6 @@ includehidden = True
 titles_only = 
 logo_only =
 display_version = True
-canonical_url = https://www.linuxguideandhints.com/
+canonical_url = https://linuxguideandhints.com/
 prev_next_buttons_location = bottom
 style_external_links = False
