--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
 - pip install sphinx
 
 script:
+- mkdir -p cert && touch cert/server.key && touch cert/server.crt && touch cert/ca.crt
 - npm install
 - make html SPHINXOPTS=-Ea
 - touch build/html/.nojekyll
