--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,9 @@ install:
 - pip install sphinx
 
 script:
-- mkdir -p cert && touch cert/server.key && touch cert/server.crt && touch cert/ca.crt
 - npm install
 - make html SPHINXOPTS=-Ea
-- grunt uglify
-- grunt imagemin
+- grunt build
 - touch build/html/.nojekyll
 
 deploy:
