Revert ".gitlab-ci.yml: disable npm and grunt steps for now"
This reverts commit 688b5025149d89a73fe5e39a92345ad3a82a3ed6.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,9 @@ pages:
   - apk --no-cache add py2-pip python-dev python libc6-compat build-base automake autoconf
   - pip install sphinx
   - mkdir -p cert && touch cert/server.key && touch cert/server.crt && touch cert/ca.crt
+  - npm install
   - make html SPHINXOPTS=-Ea
+  - grunt build
   - mv build/html/ public/
   artifacts:
     paths:
