--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,8 @@ image: node:alpine
 
 pages:
   script:
-  - apk --no-cache add py2-pip python-dev python libc6-compat build-base automake autoconf
-  - pip install sphinx
+  - apk --no-cache add py3-setuptools python3-dev python3 libc6-compat build-base automake autoconf
+  - pip3 install -U sphinx
   - mkdir -p cert && touch cert/server.key && touch cert/server.crt && touch cert/ca.crt
   - npm install -g grunt
   - npm install
