--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: node:alpine
 
 pages:
   script:
-  - apk --no-cache add py3-setuptools python3-dev python3 libc6-compat build-base automake autoconf certbot
+  - apk --no-cache add py3-setuptools python3-dev python3 libc6-compat build-base automake autoconf
   - pip3 install -U sphinx
   - mkdir -p cert && touch cert/server.key && touch cert/server.crt && touch cert/ca.crt
   - npm install -g grunt
@@ -10,7 +10,8 @@ pages:
   - make html SPHINXOPTS=-Ea
   - grunt build
   - mv build/html/ public/
-  - certbot certonly -n webroot --webroot public/ -d linuxguideandhints.com
+  - mkdir -p public/.well-known/acme-challenge
+  - echo "3pl-S-9KOVYJYRYNfTtzatcP6hjzYVAAB61t0PP9c8E.j3BekFOCQa2xc2PmlpL16aBn1CSeEWQRS84RD4kgcqo" >> public/.well-known/acme-challenge/3pl-S-9KOVYJYRYNfTtzatcP6hjzYVAAB61t0PP9c8E
   artifacts:
     paths:
     - public
