--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^3.1.0",
-    "grunt-contrib-uglify": "^4.0.0",
-    "quicklink": "^1.0.0"
+    "grunt-contrib-uglify": "^4.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
