--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt": "^1.0.3",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-imagemin": "^3.1.0",
     "grunt-contrib-uglify": "^4.0.0"
   },
