--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.3.2",
   "description": "[![Build Status](https://travis-ci.org/remyabel/linux-guide-and-hints.svg?branch=master)](https://travis-ci.org/remyabel/linux-guide-and-hints)",
   "main": "Gruntfile.js",
-  "dependencies": {
-    "fg-loadcss": "^2.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "grunt": "^1.0.3",
     "grunt-contrib-connect": "^1.0.2",
