--- a/.build.yml
+++ b/.build.yml
@@ -29,12 +29,13 @@ tasks:
         set +x
         . ~/GH_TOKEN
         set -x
-        git clone --branch='gh-pages' --depth=1 https://github.com/remyabel/linux-guide-and-hints.git
+        git clone --branch='gh-pages' --depth=1 https://github.com/remyabel/linux-guide-and-hints.git gh-pages
+        cd gh-pages
         git config user.email 'deploy@sr.ht'
         git config user.name 'sr.ht deployment bot'
-        cp -r ~/linux-guide-and-hints/build/html .
+        cp -r ~/linux-guide-and-hints/build/html/* .
         cp -r ~/linux-guide-and-hints/.nojekyll .
         cp -r ~/linux-guide-and-hints/CNAME .
         git add -A .
-        git commit -qm 'Deploy to gh-pages.'
-        git push --quiet https://"$GH_TOKEN"@github.com/linux-guide-and-hints.git
+        git commit -m 'Deploy to gh-pages.'
+        git push https://"$GH_TOKEN"@github.com/linux-guide-and-hints.git
