--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+      with:
+        submodules: true
     - uses: actions/setup-python@v1
       with:
         python-version: '3.x'
