--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "source/themes/sphinx_theme"]
 	path = source/themes/sphinx_theme
-	url = git@github.com:remyabel/sphinx_theme.git
+	url = https://github.com/remyabel/sphinx_theme.git
