Use sphinx-notfound-page for custom 404 page

--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: pip dependencies
       run: |
-        pip3 install -U --user sphinx sphinx-sitemap
+        pip3 install -U --user sphinx sphinx-sitemap sphinx-notfound-page
 
     - name: npm dependencies
       run: |
