--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: pip dependencies
       run: |
-        pip3 install -U --user sphinx sphinx-sitemap sphinx-notfound-page
+        pip3 install -U --user -r requirements.txt
 
     - name: npm dependencies
       run: |
