--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -22,18 +22,35 @@ jobs:
       with:
         node-version: '14'
 
+    - uses: actions/cache@v2
+      id: npm-cache
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+
+    - uses: actions/cache@v2
+      id: pip-cache
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: pip dependencies
+      if: steps.pip-cache.outputs.cache-hit != 'true'
       run: |
         pip3 install -U --user -r requirements.txt
 
     - name: npm dependencies
+      if: steps.npm-cache.outputs.cache-hit != 'true'
       run: |
-        npm install --save grunt
-        npm install
+        npm ci
 
     - name: sphinx build
       run: |
-        cd $GITHUB_WORKSPACE 
+        cd $GITHUB_WORKSPACE
         mkdir -p cert && touch cert/server.key && touch cert/server.crt && touch cert/ca.crt
         make html SPHINXBUILD=$HOME/.local/bin/sphinx-build SPHINXOPTS=-Ea
         ./node_modules/grunt/bin/grunt build
