Rebase to sphinx_rtd_theme 0.5.2

--- a/source/themes/sphinx_theme/sphinx_rtd_theme/theme.conf
+++ b/source/themes/sphinx_theme/sphinx_rtd_theme/theme.conf
@@ -8,9 +8,11 @@ sticky_navigation = False
 collapse_navigation = False
 navigation_depth = 4
 includehidden = True
-titles_only = 
+titles_only =
 logo_only =
 display_version = True
 canonical_url = https://linuxguideandhints.com/
 prev_next_buttons_location = bottom
 style_external_links = False
+style_nav_header_background =
+vcs_pageview_mode =
