Add canonical URL

--- a/source/themes/sphinx_theme/theme.conf
+++ b/source/themes/sphinx_theme/theme.conf
@@ -10,6 +10,6 @@ includehidden = True
 titles_only = 
 logo_only =
 display_version = True
-canonical_url =
+canonical_url = https://linuxguideandhints.com/
 prev_next_buttons_location = bottom
 style_external_links = False
