--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.6.0",
   "description": "This page contains tutorials and generally useful information regarding packages and system administration in Fedora®, Rocky® and CentOS®.",
   "dependencies": {
-    "prismjs": "^1.23.0",
-    "uglify-js": "^3.13.9",
-    "clean-css-cli": "^5.3.0"
+    "clean-css-cli": "^5.3.0",
+    "prismjs": "^1.24.1",
+    "uglify-js": "^3.13.10"
   },
   "repository": {
     "type": "git",
