--- a/source/themes/sphinx_rtd_theme/theme.conf
+++ b/source/themes/sphinx_rtd_theme/theme.conf
@@ -10,7 +10,7 @@ navigation_depth = 4
 includehidden = True
 titles_only =
 logo_only =
-display_version = True
+display_version = False
 canonical_url = https://linuxguideandhints.com/
 prev_next_buttons_location = bottom
 style_external_links = False
