--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -18,25 +18,11 @@ jobs:
       with:
         python-version: '3.x'
         architecture: 'x64'
+        cache: 'pip'
     - uses: actions/setup-node@v2
       with:
         node-version: '14'
-
-    - uses: actions/cache@v2
-      id: npm-cache
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-
-    - uses: actions/cache@v2
-      id: pip-cache
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+        cache: 'npm'
 
     - uses: actions/cache@v2
       id: sphinx-cache
