Try hashing the environment.pickle

--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -28,7 +28,7 @@ jobs:
       id: sphinx-cache
       with:
         path: ${{ github.workspace }}/build
-        key: ${{ runner.os }}-sphinx
+        key: ${{ runner.os }}-sphinx-${{ hashFiles('**/environment.pickle') }}
 
     - name: pip dependencies
       run: |
