initial conversion to mkdocs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-sphinx
-sphinx-sitemap
-sphinx-notfound-page
+mkdocs
+mkdocs-autolinks-plugin
+mkdocs-awesome-pages-plugin
+mkdocs-git-revision-date-plugin
+mkdocs-macros-plugin
+mkdocs-readthedocs
+mkdocs-material
