--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ copyright: Copyright 2024, remyabel, nazunalika
 
 # Configuration
 theme:
-  name: darkly
+  name: material
   highlightjs: true
   nav_style: dark
   hljs_languages:
@@ -35,6 +35,9 @@ theme:
     - toc.integrate
     - content.action.edit
   logo: assets/logo.png
+  palette:
+    scheme: indigo
+    accent: blue
 
 # Plugins
 plugins:
