force dark mode

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,7 +35,8 @@ theme:
     - content.action.edit
   logo: assets/logo.png
   palette:
-    scheme: indigo
+    scheme: slate
+    primary: indigo
     accent: blue
 
 # Plugins
